# Property_Management_Project

./: README.md
Chen_Honghui_Folder/: main.c
Li_Bolin_Folder/backend_files/: Manager.txt
Li_Bolin_Folder/backend_files/src/: Management.c
Li_Bolin_Folder/integrated_result/: CMakeLists.txt
Li_Bolin_Folder/integrated_result/include/: grid_map.hpp  lastar.hpp  main.h  manager.h  minisnap.hpp  owner.h  server.h
Li_Bolin_Folder/integrated_result/src/: grid_map.cpp  lastar.cpp  main.cpp  manager.c  manager.cpp  minisnap.cpp  owner.c  owner.cpp  server.c  server.cpp
Li_Bolin_Folder/manager_files/: info_management.html  manager.html
Li_Bolin_Folder/manager_files/info_consult_files/: somebody_info.html
Li_Bolin_Folder/manager_files/info_management_files/: add_somebody_info.html  delete_somebody_info.html  revise_somebody_info.html
Tian_Jiaqiang_Folder/: Manager.c  Manager.h  main.c
